--- a/client/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/client/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <ng-container *ngIf="!email_sent">
-    <div class="form password-reset" [formGroup]="forgotPasswordForm">
+    <form class="form password-reset" [formGroup]="forgotPasswordForm" autocomplete="off">
       <h2 class="title">Forgot Password Form</h2>
       <div class="row__field new">
         <mat-form-field class="bg-transparent" appearance="fill">
@@ -11,7 +11,7 @@
           <mat-icon matSuffix class="error-field" *ngIf="!forgotPasswordForm.get('emailAddress').valid && forgotPasswordForm.get('emailAddress').touched">close</mat-icon>
         </mat-form-field>
       </div>
-    </div>
+    </form>
     <div class="btn-wrapper">
       <action-button [disabled]="!forgotPasswordForm.valid" class="reset-btn" type="flat" title="Send" color="primary" (click)="sendRequest()"></action-button>
       <action-button class="reset-btn" type="flat" title="Cancel" color="warn" (click)="clickCancel()"></action-button>
