--- a/client/src/app/pages/authentication/reset-password/reset-password.component.html
+++ b/client/src/app/pages/authentication/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ng-container *ngIf="is_forgot_password">
     <ng-container *ngIf="user_id && valid_token && !is_done">
-      <div class="form password-reset" [formGroup]="passwordResetForm">
+      <form class="form password-reset" [formGroup]="passwordResetForm" autocomplete="off">
         <h2 class="title">Reset Password Form</h2>
         <div class="row__field new">
           <mat-form-field class="bg-transparent" appearance="fill">
@@ -19,7 +19,7 @@
             <mat-icon matSuffix class="error-field" *ngIf="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password) && passwordResetForm.get('confirm_password').touched">close</mat-icon>
           </mat-form-field>
         </div>
-      </div>
+      </form>
       <div class="btn-wrapper">
         <action-button [disabled]="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password)" class="reset-btn" type="flat" title="Reset" color="primary" (click)="resetPassword()"></action-button>
         <action-button class="reset-btn" type="flat" title="Cancel" color="warn" (click)="clickCancel()"></action-button>
