--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -63,7 +63,7 @@
 <br><br>
 <div class="container__gray">
   <img src="assets/icons/ic_cv.svg">
-  <img src="assets/icons/ic_cf_logo.svg">
+  <img src="assets/icons/ic_cf_logo.png">
   <img src="assets/icons/ic_camera.svg">
 </div>
 <br><br>
@@ -88,7 +88,7 @@
 <action-button title="Warn Button" color="warn"></action-button>
 <br><br>
 
-<round-checkbox id="test" indeterminate="true" title="Check Box"></round-checkbox>
+<round-checkbox  indeterminate="true" title="Check Box"></round-checkbox>
 
 <br><br>
 
