--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.html
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.html
@@ -3,7 +3,7 @@
   <mat-dialog-content>
     <div class="container">
       <div class="container__full">
-        <div class="profile-form" [formGroup]="skillsForm" autocomplete="off">
+        <form class="profile-form" [formGroup]="skillsForm" autocomplete="off">
 
           <div class="profile-form__field search">
             <h3>Skills</h3> <img src="assets/icons/ic_question.svg" class="question" (click)="openSkillDescriptionDialog()">
@@ -26,7 +26,7 @@
           </div>
 
           </div>
-        </div>
+        </form>
       </div>
     </div>
   </mat-dialog-content>
