--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -457,7 +457,7 @@
             <h3>Preferred & Required Skills</h3><img class="question-icon" src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()">
             <div class="education-level-m">
 
-              <div *ngIf="jobData.minimum_skills?.length > 0" class="form-field search" [formGroup]="requiredSkillsSearchForm">
+              <form *ngIf="jobData.minimum_skills?.length > 0" class="form-field search" [formGroup]="requiredSkillsSearchForm" autocomplete="off">
                 <mat-form-field appearance="standard" class="search">
                   <mat-icon matSuffix>search</mat-icon>
                   <input matInput placeholder="Search required skills" type="text" [matAutocomplete]="autocompleteRequiredSkills" formControlName="required_skill">
@@ -468,7 +468,7 @@
                     </mat-option>
                   </mat-autocomplete>
                 </mat-form-field>
-              </div>
+              </form>
 
               <div *ngIf="temp_required_skill" class="temp-skill">
                 <simple-tag type="gray" title="{{temp_required_skill.skill}}" ellipseTag="true"
@@ -505,7 +505,7 @@
             </div>
             <div class="education-level-m">
 
-              <div *ngIf="jobData.preferred_skills?.length > 0" class="form-field search" [formGroup]="preferredSkillsSearchForm">
+              <form *ngIf="jobData.preferred_skills?.length > 0" class="form-field search" [formGroup]="preferredSkillsSearchForm" autocomplete="off">
                 <mat-form-field appearance="standard" class="search">
                   <mat-icon matSuffix>search</mat-icon>
                   <input matInput placeholder="Search preferred skills" type="text" [matAutocomplete]="autocompletePreferredSkills"
@@ -517,7 +517,7 @@
                     </mat-option>
                   </mat-autocomplete>
                 </mat-form-field>
-              </div>
+              </form>
 
               <div *ngIf="temp_preferred_skill" class="temp-skill">
                 <simple-tag type="normal" title="{{temp_preferred_skill.skill}}" ellipseTag="true"
