--- a/client/src/app/components/request-response-popup/request-response-popup.component.html
+++ b/client/src/app/components/request-response-popup/request-response-popup.component.html
@@ -5,7 +5,7 @@
   </div>
 </ng-container>
 
-<div class="profile-form" [formGroup]="searchForm">
+<form class="profile-form" [formGroup]="searchForm" autocomplete="off">
     <div class="application-references refer-pop-app">
     <h1 class="title">References</h1>
   <div class="profile-form__field search">
@@ -57,4 +57,4 @@
     </ng-container>
   </div>
 </div>
-</div>
+</form>
