--- a/client/src/app/pages/people/people-search/people-search.component.html
+++ b/client/src/app/pages/people/people-search/people-search.component.html
@@ -7,7 +7,7 @@
 
 <!-- Search Bar -->
 <div class="career-main">
-  <div class="common-search-filter" [formGroup]="peopleForm" autocomplete="off">
+  <form class="common-search-filter" [formGroup]="peopleForm" autocomplete="off">
     <div class="filter-data">
       <mat-icon (click)="toggleTabMenuOpen()" class="filter_icon">filter_list</mat-icon>
     </div>
@@ -35,7 +35,7 @@
         </mat-autocomplete>
       </mat-form-field>
     </div>
-  </div>
+  </form>
 
   <!-- Filter Side -->
   <div class="people-main-container">
