--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
@@ -60,11 +60,11 @@
         <div class="form-field name-field">
           <mat-form-field class="bg-transparent first-name" appearance="fill">
             <mat-label>First Name</mat-label>
-            <input matInput placeholder="First Name" type="text" formControlName="first_name">
+            <input matInput placeholder="First Name" type="text" formControlName="first_name" autocomplete="new-first">
           </mat-form-field>
           <mat-form-field class="bg-transparent last-name" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Last Name" type="text" formControlName="last_name">
+            <input matInput placeholder="Last Name" type="text" formControlName="last_name" autocomplete="new-last">
             <mat-icon matSuffix
               *ngIf="generalInfoForm.get('first_name').valid && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && generalInfoForm.get('last_name').valid && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">
               done</mat-icon>
@@ -77,7 +77,7 @@
         <div class="form-field">
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>City</mat-label>
-            <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
+            <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city" autocomplete="new-city">
             <mat-icon matSuffix
               *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && helperService.checkSpacesString(generalInfoForm.get('city').value) && checkCityValidation()">
               done</mat-icon>
@@ -97,7 +97,7 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>State</mat-label>
             <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState"
-              formControlName="state">
+              formControlName="state" autocomplete="new-state">
             <mat-icon matSuffix
               *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && generalInfoForm.get('state').valid && checkStateValidation()">
               done</mat-icon>
@@ -137,7 +137,7 @@
         <div class="form-field">
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Job Title</mat-label>
-            <input matInput placeholder="Job Title" type="text" formControlName="title">
+            <input matInput placeholder="Job Title" type="text" formControlName="title" autocomplete="new-title">
           </mat-form-field>
         </div>
 
